--- a/LengendOfFightDemons/Resources/scene/dungeonConfig.json
+++ b/LengendOfFightDemons/Resources/scene/dungeonConfig.json
@@ -1,1 +1,1 @@
-{"dungeons":[{"lifeCircles":[{"campId":80001,"result":"failed","type":"guardDestory"},{"campId":80002,"result":"success","type":"guardDestory"}],"dungeonId":0,"sceneId":300011,"type":"siege"}]}
+{"dungeons":[{"lifeCircles":[{"campId":80001,"result":"failed","type":"guardDestory"},{"campId":80002,"result":"success","type":"guardDestory"}],"operationCampId":80001, "dungeonId":300011,"sceneId":300011,"type":"siege"}]}
